--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="chess-style.css">
 </head>
 <body>
+    <!-- Page Title -->
     <h1>Seychelles Chess Player Rankings</h1>
 
     <!-- Rankings Table -->
@@ -17,10 +18,7 @@
             <tr>
                 <th>Rank</th>
                 <th>Username</th>
-                <th>Platform</th>
-                <th>Rapid</th>
-                <th>Blitz</th>
-                <th>Bullet</th>
+                <th>Average Rating</th>
             </tr>
         </thead>
         <tbody id="rankingsBody">
