--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -16,9 +16,9 @@
     <table id="rankingsTable">
         <thead>
             <tr>
-                <th>Rank</th>
-                <th>Username</th>
-                <th>Average Rating</th>
+                <th>Rank</th> <!-- Rank Column -->
+                <th>Name</th> <!-- Updated from Username -->
+                <th>SeyChess Rating</th> <!-- Updated from Average Rating -->
             </tr>
         </thead>
         <tbody id="rankingsBody">
