--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -16,9 +16,9 @@
     <table id="rankingsTable">
         <thead>
             <tr>
-                <th>Rank</th> <!-- Rank Column -->
-                <th>Name</th> <!-- Updated from Username -->
-                <th>SeyChess Rating</th> <!-- Updated from Average Rating -->
+                <th>Rank</th>
+                <th>Name</th>
+                <th>SeyChess Rating</th>
             </tr>
         </thead>
         <tbody id="rankingsBody">
@@ -26,7 +26,7 @@
         </tbody>
     </table>
 
-    <!-- Link to External JS -->
+    <!-- Link to External JavaScript -->
     <script src="chess-script.js"></script>
 </body>
 </html>
