--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -2,31 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seychelles Chess Player Rankings</title>
-    <!-- Link to External CSS -->
+    <title>Seychelles Chess Rankings</title>
     <link rel="stylesheet" href="chess-style.css">
 </head>
 <body>
-    <!-- Page Title -->
-    <h1>Seychelles Chess Player Rankings</h1>
-
-    <!-- Rankings Table -->
-    <table id="rankingsTable">
+    <h1 style="text-align: center;">SEYCHELLES CHESS PLAYER RANKINGS</h1>
+    <table>
         <thead>
             <tr>
-                <th>Rank</th>
-                <th>Name</th>
-                <th>SeyChess Rating</th>
+                <th>RANK</th>
+                <th>NAME</th>
+                <th>SEYCHESS RATING</th>
             </tr>
         </thead>
-        <tbody id="rankingsBody">
-            <!-- Data Will Be Inserted Dynamically -->
-        </tbody>
+        <tbody id="rankingsBody"></tbody>
     </table>
-
-    <!-- Link to External JavaScript -->
     <script src="chess-script.js"></script>
 </body>
 </html>
