--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="chess-style.css">
 </head>
 <body>
-    <h1 style="text-align: center;">SEYCHELLES CHESS PLAYER RANKINGS</h1>
+    <h1 class="title">Seychelles Chess Player Rankings</h1>
     <table>
         <thead>
             <tr>
