--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -13,7 +13,7 @@
             <tr>
                 <th>RANK</th>
                 <th>NAME</th>
-                <th>SEYCHESS RATING</th>
+                <th>RATING</th>
             </tr>
         </thead>
         <tbody id="rankingsBody"></tbody>
