--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seychelles Chess Rankings</title>
-    <link rel="stylesheet" href="chess-style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Hero Section -->
@@ -15,42 +15,39 @@
 
     <!-- Content Section -->
     <div class="content-section">
-        <table class="ranking-table">
-            <thead>
-                <tr>
-                    <th>RANK</th>
-                    <th>NAME</th>
-                    <th>SEYCHESS RATING</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Benjamin Hoareau</td>
-                    <td>1911 *</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Rudolph Camille</td>
-                    <td>1462</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Adam Furneau</td>
-                    <td>945</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Darius Hoareau</td>
-                    <td>912</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Jeremy Raguain</td>
-                    <td>708</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Rank</th>
+                        <th>Name</th>
+                        <th>Seychess Rating</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Benjamin Hoareau</td>
+                        <td>1911 *</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Rudolph Camille</td>
+                        <td>1462</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Adam Furneau</td>
+                        <td>945</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Darius Hoareau</td>
+                        <td>912</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
