--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -3,51 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seychelles Chess Rankings</title>
+    <title>Seychelles Chess Player Rankings</title>
     <link rel="stylesheet" href="chess-style.css">
 </head>
 <body>
-    <!-- Hero Section -->
+    <!-- Header Section -->
     <div class="hero-section">
-        <h1>SEYCHELLES CHESS PLAYER RANKINGS</h1>
-        <p>Explore the top players and their performances across platforms.</p>
-    </div>
-
-    <!-- Content Section -->
-    <div class="content-section">
-        <div class="table-container">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Rank</th>
-                        <th>Name</th>
-                        <th>Seychess Rating</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Benjamin Hoareau</td>
-                        <td>1911 *</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Rudolph Camille</td>
-                        <td>1462</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Adam Furneau</td>
-                        <td>945</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Darius Hoareau</td>
-                        <td>912</td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="hero-content">
+            <h1 class="title">SEYCHELLES CHESS PLAYER RANKINGS</h1>
+            <p class="subtitle">Explore the top players and their performances across platforms.</p>
         </div>
     </div>
+
+    <!-- Description Section -->
+    <section class="description-section">
+        <p>
+            Welcome to the Seychelles Chess Player Rankings! Discover the top-performing chess players from various platforms like Chess.com and Lichess. Stay tuned as we update with new stats and players regularly.
+        </p>
+    </section>
+
+    <!-- Rankings Table -->
+    <section class="rankings-section">
+        <table class="rankings-table">
+            <thead>
+                <tr>
+                    <th>RANK</th>
+                    <th>NAME</th>
+                    <th>SEYCHESS RATING</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Benjamin Hoareau</td>
+                    <td>1911 *</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Rudolph Camille</td>
+                    <td>1462</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Adam Furneau</td>
+                    <td>945</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Darius Hoareau</td>
+                    <td>912</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
 </body>
 </html>
