--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seychelles Chess Player Rankings</title>
+    <title>Seychelles Chess Rankings</title>
     <link rel="stylesheet" href="chess-style.css">
 </head>
 <body>
