--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -27,7 +27,7 @@
                 </tr>
             </thead>
             <tbody id="rankingsBody">
-                <!-- Dynamic rows will be inserted here via JavaScript -->
+                <!-- Rows will be dynamically populated by JS -->
             </tbody>
         </table>
     </section>
