--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -33,6 +33,6 @@
     </section>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="chess-script.js"></script>
 </body>
 </html>
