--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -10,7 +10,7 @@
     <!-- Header Section -->
     <div class="hero-section">
         <div class="hero-content">
-            <h1 class="title">SEYCHELLES CHESS PLAYER RANKINGS</h1>
+            <h1 class="title">SEYCHELLES CHESS RANKINGS</h1>
             <p class="subtitle">Explore the top players and their performances across platforms.</p>
         </div>
     </div>
