--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -23,6 +23,9 @@
                     <th>RANK</th>
                     <th>EVOLUTION</th>
                     <th>NAME</th>
+                    <th>BULLET</th>
+                    <th>BLITZ</th>
+                    <th>RAPID</th>
                     <th>SEYCHESS RATING</th>
                 </tr>
             </thead>
