--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -21,7 +21,7 @@
             <thead>
                 <tr>
                     <th>RANK</th>
-                    <th>EVOLUTION</th>
+                    <th>EVO</th>
                     <th>NAME</th>
                     <th>BULLET</th>
                     <th>BLITZ</th>
