--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -26,7 +26,7 @@
                     <th>BULLET</th>
                     <th>BLITZ</th>
                     <th>RAPID</th>
-                    <th>SEYCHESS RATING</th>
+                    <th>AVG.RATING</th>
                 </tr>
             </thead>
             <tbody id="rankingsBody">
