--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seychelles Chess Rankings</title>
     <link rel="stylesheet" href="chess-style.css">
+    <link rel="icon" href="web-icon.ico" type="image/x-icon"> <!-- Link to favicon -->
 </head>
 <body>
     <!-- Header Section -->
