--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -22,7 +22,7 @@
             <thead>
                 <tr>
                     <th>RANK</th>
-                    <th>EVO</th>
+                    <th>AVATAR</th>
                     <th>NAME</th>
                     <th>BULLET</th>
                     <th>BLITZ</th>
