--- a/seychess/chess-index.html
+++ b/seychess/chess-index.html
@@ -22,7 +22,7 @@
             <thead>
                 <tr>
                     <th>RANK</th>
-                    <th>AVATAR</th>
+                    <th>AVATAR</th> <!-- Added Avatar Column -->
                     <th>NAME</th>
                     <th>BULLET</th>
                     <th>BLITZ</th>
@@ -32,6 +32,18 @@
             </thead>
             <tbody id="rankingsBody">
                 <!-- Rows will be dynamically populated by JS -->
+                <!-- Example Row -->
+                <tr>
+                    <td>1</td>
+                    <td class="avatar-cell">
+                        <img src="default-avatar.png" alt="Avatar Placeholder" class="avatar-img"> <!-- Placeholder Avatar -->
+                    </td>
+                    <td>Player Name</td>
+                    <td>1500</td>
+                    <td>1600</td>
+                    <td>1700</td>
+                    <td>1600.0</td>
+                </tr>
             </tbody>
         </table>
     </section>
