--- a/chess-test/chess-index.html
+++ b/chess-test/chess-index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seychelles Chess Rankings</title>
     <link rel="stylesheet" href="chess-style.css">
+    <link rel="icon" href="web-icon.ico" type="image/x-icon"> <!-- Link to favicon -->
 </head>
 <body>
     <!-- Header Section -->
@@ -22,7 +23,7 @@
             <thead>
                 <tr>
                     <th>RANK</th>
-                    <th>EVO</th>
+                    <th>AVATAR</th> <!-- Added Avatar Column -->
                     <th>NAME</th>
                     <th>BULLET</th>
                     <th>BLITZ</th>
@@ -32,6 +33,18 @@
             </thead>
             <tbody id="rankingsBody">
                 <!-- Rows will be dynamically populated by JS -->
+                <!-- Example Row -->
+                <tr>
+                    <td>1</td>
+                    <td class="avatar-cell">
+                        <img src="default-avatar.png" alt="Avatar Placeholder" class="avatar-img"> <!-- Placeholder Avatar -->
+                    </td>
+                    <td>Player Name</td>
+                    <td>1500</td>
+                    <td>1600</td>
+                    <td>1700</td>
+                    <td>1600.0</td>
+                </tr>
             </tbody>
         </table>
     </section>
