--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="webdev-cheatsheet/wdcs-home.html">Webdev-Cheatsheet</a></li>
         <li><a href="mathalon/math-index.html">Mathalon</a></li>
         <li><a href="seychess/chess-index.html">Seychelles Chess Rankings</a></li>
-         <li><a href="chest-test/chess-index.html">seychess-test-server</a></li>
+         <li><a href="chess-test/chess-index.html">seychess-test-server</a></li>
     </ul>
 </body>
 </html>
