--- a/chess-test/chess-index.html
+++ b/chess-test/chess-index.html
@@ -38,28 +38,28 @@
                     <th>
                         NAME
                         <button class="tooltip-btn">
-                            <span class="tooltip-text">Player's real name or username.</span>
+                            <span class="tooltip-text">Player's real name/username.</span>
                             ?
                         </button>
                     </th>
                     <th>
                         BULLET
                         <button class="tooltip-btn">
-                            <span class="tooltip-text">Rating for fast-paced games under 3 minutes.</span>
+                            <span class="tooltip-text">Rating for fast-paced games under 3 minutes(5% of AVG).</span>
                             ?
                         </button>
                     </th>
                     <th>
                         BLITZ
                         <button class="tooltip-btn">
-                            <span class="tooltip-text">Rating for games lasting 3–10 minutes.</span>
+                            <span class="tooltip-text">Rating for games lasting 3–10 minutes(25% of AVG)</span>
                             ?
                         </button>
                     </th>
                     <th>
                         RAPID
                         <button class="tooltip-btn">
-                            <span class="tooltip-text">Rating for games lasting 10+ minutes.</span>
+                            <span class="tooltip-text">Rating for games lasting 10+ minutes(70% of AVG)</span>
                             ?
                         </button>
                     </th>
